layout adjustments on editor and viewer

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,8 @@
     -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
         rel="stylesheet">
+  <link href="https://highlightjs.org/static/demo/styles/atom-one-light.css"
+        rel="stylesheet">
   <title>React App</title>
 </head>
 <body>
